syntax = "proto3";

package job;

option go_package = "./";

service TaskService {
    rpc HealthCheck(NoParams) returns (HealthCheckResponse);
    rpc StartJob(StartJobRequest) returns (StartJobResponse);
    rpc GetJobStatus (GetJobStatusRequest) returns  (stream GetJobStatusResponse);
}

message NoParams {}

message HealthCheckResponse {
    string status = 1;
}

message StartJobRequest {
    string job_id = 1;
    string job_name = 2;
}

message StartJobResponse {
    string Status = 1;
}

message GetJobStatusRequest {
    string job_id = 1;
}

message GetJobStatusResponse {
    string Status = 1;
}
